# project-terra

./: .gitignore  README.md  package.json  pnpm-lock.yaml  project-details.md  turbo.json
apps/command-center/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/command-center/src/app/: globals.css  layout.tsx  page.tsx
apps/command-center/src/components/: command-center-shell.tsx
apps/command-center/src/hooks/: use-agent-stream.ts  use-council-socket.ts  use-final-signal.ts  use-price-stream.ts
apps/command-center/src/lib/supabase/: client.ts  (+1 more)
apps/command-center/src/providers/: theme-provider.tsx  websocket-provider.tsx
apps/docs/: package.json
apps/docs/src/app/: globals.css  layout.tsx  page.tsx
apps/intelligence-core/: .env.example  README.md  pyproject.toml  requirements.txt
apps/intelligence-core/src/: __init__.py  config.py  council.py  llm.py  main.py  types.py
apps/intelligence-core/src/agents/: __init__.py  base.py  geologist.py  oracle.py  quant.py  strategist.py
apps/intelligence-core/src/api/: __init__.py  routes.py  websocket.py
apps/intelligence-core/src/services/: __init__.py  broker.py  event_bus.py  events.py  market_data.py  market_data_provider.py  persistence.py  supabase_client.py  tick_simulator.py
apps/intelligence-core/src/tools/: __init__.py  commodity_prices.py  mining_filings.py  news_sentiment.py
apps/intelligence-core/tests/: test_agents.py  test_council.py  test_event_bus.py  test_websocket.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
(+7 files in other folders)
