[project]
name = "intelligence-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "langgraph>=0.2.60",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "supabase>=2.10.0",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pytest>=8.3.3",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
